Add Docker support and update package.json scripts
- Introduced Dockerfile for containerization of the application.
- Added .dockerignore to exclude unnecessary files from the Docker context.
- Updated README.Docker.md with instructions for building and running the application.
- Modified package.json to include a start script for the application.
- Adjusted PORT definition in index.js for consistency.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "load-csv": "node scripts/load-csv.js"
+    "start" : "node src/index.js",
+    "load-csv": "node scripts/load-csv.js",
+    "prisma:generate": "prisma generate"
   },
   "author": "Khem Sovitou",
   "license": "MIT",
