Refactor Docker and deployment setup; add blue-green deployment script and nginx configuration

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start" : "node src/index.js",
+    "start": "node src/index.js",
     "load-csv": "node scripts/load-csv.js",
-    "prisma:generate": "prisma generate"
+    "prisma:generate": "prisma generate",
+    "deploy": "bash ./deployment.sh",
+    "start:blue-green": "docker-compose -f compose.yaml up -d"
   },
   "author": "Khem Sovitou",
   "license": "MIT",
