--- a/compose.yaml
+++ b/compose.yaml
@@ -1,11 +1,38 @@
 version: "3.9"
+
 services:
-  api:
+  blue:
     build: .
     ports:
-      - "5000:5000"
+      - "5001:5000"
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
       - ./prisma/database.sqlite:/usr/src/app/prisma/database.sqlite
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
 
+  green:
+    build: .
+    ports:
+      - "5002:5000"
+    volumes:
+      - ./prisma/database.sqlite:/usr/src/app/prisma/database.sqlite
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "5000:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - blue
+      - green
